--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Øvelser med git</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="2a.js" />
   </head>
   <body>
+    <header></header>
     <main>
       <h1 class="h1">Title</h1>
       <h2 class="h2">Undertitle</h2>
@@ -23,8 +25,8 @@
 
       <article class="article">
         <img class="img" src="78-200x200.jpg" alt="" />
-        <h3 class="h3">Article 2</h3>
-        <p class="text">
+        <h3 id="h3" class="h3">Article 2</h3>
+        <p id="text" class="text">
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor
           dolorum suscipit quisquam natus incidunt. Delectus sapiente
           reprehenderit commodi dolorem optio voluptates sed ut consequuntur.
@@ -35,5 +37,6 @@
     <footer>
       <p>This is the footer</p>
     </footer>
+    <script src="2a.js"></script>
   </body>
 </html>
